--- a/spring_learning/pom.xml
+++ b/spring_learning/pom.xml
@@ -56,6 +56,12 @@
             <artifactId>spring-aop</artifactId>
             <version>4.3.13.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+
     </dependencies>
     
 </project>
