spring aspectj finished

--- a/spring_learning/pom.xml
+++ b/spring_learning/pom.xml
@@ -15,10 +15,10 @@
             <scope>test</scope>
         </dependency>
         <!-- spring支持 -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework</groupId>-->
+            <!--<artifactId>spring-context</artifactId>-->
+        <!--</dependency>-->
         <!-- spring测试支持 -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -61,7 +61,17 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.7.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>3.2.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.13.RELEASE</version>
+        </dependency>
+        <!-- context的版本要和spring core版本一致 -->
     </dependencies>
     
 </project>
